--- a/flink-metrics/flink-metrics-prometheus/pom.xml
+++ b/flink-metrics/flink-metrics-prometheus/pom.xml
@@ -66,6 +66,11 @@ under the License.
 			<artifactId>simpleclient</artifactId>
 			<version>${prometheus.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>io.prometheus</groupId>
+			<artifactId>simpleclient_pushgateway</artifactId>
+			<version>${prometheus.version}</version>
+		</dependency>
 
 		<dependency>
 			<groupId>io.prometheus</groupId>
@@ -94,7 +99,6 @@ under the License.
 			<groupId>com.mashape.unirest</groupId>
 			<artifactId>unirest-java</artifactId>
 			<version>1.4.9</version>
-			<scope>test</scope>
 		</dependency>
 	</dependencies>
 
@@ -103,27 +107,55 @@ under the License.
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-shade-plugin</artifactId>
+				<configuration>
+					<createDependencyReducedPom>false</createDependencyReducedPom>
+				</configuration>
 				<executions>
-					<execution>
-						<id>shade-flink</id>
-						<phase>package</phase>
-						<goals>
-							<goal>shade</goal>
-						</goals>
-						<configuration>
-							<artifactSet>
-								<includes>
-									<include>io.prometheus:*</include>
-								</includes>
-							</artifactSet>
-							<relocations combine.children="append">
-								<relocation>
-									<pattern>io.prometheus.client</pattern>
-									<shadedPattern>org.apache.flink.shaded.io.prometheus.client</shadedPattern>
-								</relocation>
-							</relocations>
-						</configuration>
-					</execution>
+				<execution>
+					<phase>package</phase>
+					<goals>
+						<goal>shade</goal>
+					</goals>
+					<configuration>
+						<minimizeJar>false</minimizeJar>
+						<filters>
+							<filter>
+								<artifact>*:*</artifact>
+								<excludes>
+									<exclude>META-INF/*.SF</exclude>
+									<exclude>META-INF/*.DSA</exclude>
+									<exclude>META-INF/*.RSA</exclude>
+									<exclude>org/json/**</exclude>
+								</excludes>
+							</filter>
+						</filters>
+					</configuration>
+				</execution>
+
+<!--				<executions>-->
+<!--					<execution>-->
+<!--						<id>shade-flink</id>-->
+<!--						<phase>package</phase>-->
+<!--						<goals>-->
+<!--							<goal>shade</goal>-->
+<!--						</goals>-->
+<!--						<configuration>-->
+<!--							<artifactSet>-->
+<!--								<includes>-->
+<!--									<include>io.prometheus:*</include>-->
+<!--									<include>com.mashape.unirest:*</include>-->
+<!--									<include>org.apache.httpcomponents:*</include>-->
+<!--									<include>org.json:*</include>-->
+<!--								</includes>-->
+<!--							</artifactSet>-->
+<!--							<relocations combine.children="append">-->
+<!--								<relocation>-->
+<!--									<pattern>io.prometheus.client</pattern>-->
+<!--									<shadedPattern>org.apache.flink.shaded.io.prometheus.client</shadedPattern>-->
+<!--								</relocation>-->
+<!--							</relocations>-->
+<!--						</configuration>-->
+<!--					</execution>-->
 				</executions>
 			</plugin>
 		</plugins>
