--- a/flink-runtime-web/pom.xml
+++ b/flink-runtime-web/pom.xml
@@ -56,6 +56,27 @@ under the License.
 			<version>${project.version}</version>
 		</dependency>
 
+		<dependency>
+			<groupId>com.alibaba.blink</groupId>
+			<artifactId>flink-yarn_${scala.binary.version}</artifactId>
+			<version>${project.version}</version>
+			<scope>provided</scope>
+			<exclusions>
+				<exclusion>
+					<artifactId>commons-beanutils</artifactId>
+					<groupId>commons-beanutils</groupId>
+				</exclusion>
+			</exclusions>
+		</dependency>
+
+		<dependency>
+			<groupId>com.mashape.unirest</groupId>
+			<artifactId>unirest-java</artifactId>
+			<version>1.4.9</version>
+		</dependency>
+
+
+
 		<!-- ===================================================
 						Dependencies for the Web Server
 			=================================================== -->
